Add contentCount to GetAssets API (#20)
